--- a/index.html
+++ b/index.html
@@ -1,15 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>Writing to the page</title>
+    <title>Writing to the page</title>
 
-  <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+      /* Custom select styles */
+      .custom-select {
+        position: relative;
+      }
+
+      .custom-select-wrapper {
+        position: relative;
+        user-select: none;
+        cursor: pointer;
+      }
+
+      .custom-select-trigger {
+        padding: 0.5rem;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        background-color: #fff;
+      }
+
+      .custom-options {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        border: 1px solid #ccc;
+        border-top: none;
+        border-radius: 4px;
+        background-color: #fff;
+        z-index: 999;
+      }
+
+      .custom-option {
+        padding: 0.5rem;
+      }
+
+      .custom-option:hover {
+        background-color: #f0f0f0;
+      }
+
+      .custom-select.open .custom-options {
+        display: block;
+      }
+    </style>
 
   </head>
 
