--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         city_div = Element("city")
         city_div.element.innerHTML = "<option>Москва</option>"
         city_div.element.innerHTML = "<option>,fkfib[f</option>"
+        city_div.element.innerHTML = "<option>чикибанбони</option>"
 
 
     </py-script>
