--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
       </form>
     </div>
-    <div id="request_status"></div>
+    <div id="request_status">d</div>
     <div id="request_text"></div>
 
 
