--- a/index.html
+++ b/index.html
@@ -131,6 +131,33 @@
             inputField.blur();
           }
         });
+
+
+        async function fetchData() {
+          try {
+            const response = await fetch('http://185.182.110.81:9000/get_city', {
+              headers: {
+                'accept': 'application/json'
+              }
+            });
+
+            if (!response.ok) {
+              throw new Error('Network response was not ok');
+            }
+
+            const data = await response.json();
+            // const city = data.city; // Предполагается, что объект данных содержит свойство "city"
+
+            // Далее вы можете использовать переменную "city" в своем коде
+            console.log(data);
+            // Или выполнить другие операции с переменной "city"
+          } catch (error) {
+            console.error('Error fetching data:', error);
+          }
+        }
+
+        // Вызываем функцию для выполнения запроса
+        fetchData();
         
     </script>
 
@@ -141,17 +168,12 @@
 
     <!-- Python code -->
     <py-script>
-        from js import tg, user_id, user_firstname, username
+        from js import tg, user_id, user_firstname, username, data
         display(f"{user_firstname}! Заполните объявление!!!", target="hello")
 
-        from pyodide.http import pyfetch
+        pyscript.write('request_status', data)
 
-        response = pyfetch(url="http://185.182.110.81:9000/get_city", method="GET")
-        response_dict = response
 
-        status = f"Request status: {response.json()}"
-
-        pyscript.write('request_status', status)
 
     </py-script>
   </body>
