--- a/index.html
+++ b/index.html
@@ -133,44 +133,43 @@
         });
 
 
-        async function fetchData() {
-          try {
-            const response = await fetch('http://185.182.110.81:9000/get_city', {
-              headers: {
-                'accept': 'application/json'
-              }
-            });
-
-            if (!response.ok) {
-              throw new Error('Network response was not ok');
-            }
-
-            const data = await response.json();
-            return data;
-          } catch (error) {
-            console.error('Error fetching data:', error);
+        async function fetchCityList() {
+        const url = 'http://185.182.110.81:9000/get_city';
+        const response = await fetch(url, {
+          method: 'GET',
+          headers: {
+            'accept': 'application/json'
           }
+        });
+
+        if (!response.ok) {
+          throw new Error('Ошибка при получении списка городов');
         }
 
-        // Асинхронная функция для обработки данных
-        async function processData() {
-          try {
-            const cityData = await fetchData();
-            // Здесь cityData содержит ответ с сервера в формате JSON, который вы можете использовать в своем коде
-            return cityData;
-          } catch (error) {
-            console.error('Error processing data:', error);
-          }
-        }
+        const data = await response.json();
+        return data;
+      }
 
-        // Вызываем функцию для выполнения запроса и обработки данных
-        city = processData();
+      // Использование функции для получения списка городов
+      async function main() {
+        try {
+          const city = await fetchCityList();
+          console.log('Список городов:', city);
+          // Далее вы можете использовать список городов в вашем коде
+        } catch (error) {
+          console.error(error);
+        }
+      }
+
+main();
+
+
+
         
     </script>
 
     <!-- python config -->
     <py-config>
-      packages = ["requests", "pyodide-http", "sqlite3"]
     </py-config>
 
     <!-- Python code -->
