--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         });
 
 
-        city = await fetch('http://185.182.110.81:9000/get_city', {
+        const city = await fetch('http://185.182.110.81:9000/get_city', {
           headers: {
             'accept': 'application/json'
           }
