--- a/index.html
+++ b/index.html
@@ -133,12 +133,6 @@
         });
 
 
-        const city = await fetch('http://185.182.110.81:9000/get_city', {
-          headers: {
-            'accept': 'application/json'
-          }
-        });
-
 
         
     </script>
@@ -152,7 +146,7 @@
         from js import tg, user_id, user_firstname, username, city
         display(f"{user_firstname}! Заполните объявление!!!", target="hello")
 
-        pyscript.write('request_status', city)
+        <!-- pyscript.write('request_status', city) -->
 
 
 
