--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
         });
 
 
-
         
     </script>
 
@@ -143,10 +142,9 @@
 
     <!-- Python code -->
     <py-script>
-        from js import tg, user_id, user_firstname, username, city
+        from js import tg, user_id, user_firstname, username
         display(f"{user_firstname}! Заполните объявление!!!", target="hello")
 
-        <!-- pyscript.write('request_status', city) -->
 
 
 
