--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
     <py-script>
         from js import tg, user_id, user_firstname, username, city
         display(f"{user_firstname}! Заполните объявление!!!", target="hello")
+        display(f"{city}", target="request_status")
 
 
 
