--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
           }
         });
 
-        city = await fetch('http://185.182.110.81:9000/get_city')
-          .then(response => response.json())
-          .then(json => console.log(json))
+        city = null;
+        fetch('http://185.182.110.81:9000/get_city')
+                  .then(response => {city = response.json()})
 
         
     </script>
