--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         });
 
         city = null;
-        fetch('http://185.182.110.81:9000/get_city')
+        fetch('https://usefulwork.ru/get_category')
                   .then(response => {city = response.json()})
 
         
