--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <!-- python config -->
     <py-config>
-      packages = ["requests", "pyodide.http"]
+      packages = ["requests", "pyodide-http"]
     </py-config>
 
     <!-- Python code -->
