--- a/index.html
+++ b/index.html
@@ -142,21 +142,43 @@
 
     <!-- python config -->
     <py-config>
-      packages = ["requests", "pyodide-http"]
+      packages = ["pyodide.http", "requests", "typing"]
     </py-config>
 
     <!-- Python code -->
     <py-script>
         from js import tg, user_id, user_firstname, username, city
         display(f"{user_firstname}! Заполните объявление!!!", target="hello")
-        
+
+        async def request(url: str, method: str = "GET", body: Optional[str] = None,
+                  headers: Optional[dict[str, str]] = None, **fetch_kwargs: Any) -> FetchResponse:
+        kwargs = {"method": method, "mode": "cors"}  # CORS: https://en.wikipedia.org/wiki/Cross-origin_resource_sharing
+        if body and method not in ["GET", "HEAD"]:
+            kwargs["body"] = body
+        if headers:
+            kwargs["headers"] = headers
+        kwargs.update(fetch_kwargs)
+
+        response = await pyfetch(url, **kwargs)
+        return response
+
+        # Пример использования
+        async def main():
+            baseurl = "https://usefulwork.ru/get_category"
+
+            headers = {"accept": "application/json"}
+
+            response = await request(f"{baseurl}/get_city", method="GET", headers=headers)
+            print(f"GET request => status: {response.status}, json: {await response.json()}")
+            return response
+
+          city = await main()
+          display(f"{city}", target="request_status")
+
+
 
         
-
-
-
-
     </py-script>
-    <py-script src="main.py"></py-script>
+
   </body>
 </html>
