--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 
     <!-- python config -->
     <py-config>
+      [[fetch]]
       packages = ["pyodide.http", "requests", "typing"]
     </py-config>
 
