--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         display(f"{user_firstname}! Заполните объявление!!!", target="hello")
         
 
-        response = requests.get("http://185.182.110.81:9000/get_city", verify=False)
+        response = requests.get("http://www.columbia.edu/~fdc/sample.html", verify=False)
         display(f"{response}", target="request_status")
 
 
