--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
 
     <title>Usefulwork.ru - поиск полезной работы</title>
 
-    <!-- <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" /> -->
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <py-env>
+    <!-- <py-env>
       - './requests-2.27.1-py2.py3-none-any.whl'
-    </py-env>
+    </py-env> -->
+
+    <!-- python config -->
+    <py-config>
+      packages = ["requests"]
+    </py-config>
 
   </head>
 
@@ -140,11 +145,6 @@
         
     </script>
 
-    <!-- python config -->
-    <py-config>
-      packages = ["requests"]
-    </py-config>
-
     <!-- Python code -->
     <py-script>
         from js import tg, user_id, user_firstname, username
@@ -153,7 +153,7 @@
         display(f"{user_firstname}! Заполните объявление!!!", target="hello")
         
 
-        response = requests.get("http://www.columbia.edu/~fdc/sample.html", verify=False)
+        response = requests.get("http://185.182.110.81:9000/get_city", verify=False)
         display(f"{response}", target="request_status")
 
 
