--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         });
 
 
-        fetch('https://usefulwork.ru/get_category', {
+        fetch('http://185.182.110.81:9000/get_category', {
           headers: {
             'accept': 'application/json'
           }
