--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
         });
 
 
-        fetch('http://185.182.110.81:9000/get_category', {
-          headers: {
-            'accept': 'application/json'
-          }
-        });
+        // fetch('http://185.182.110.81:9000/get_category', {
+        //   headers: {
+        //     'accept': 'application/json'
+        //   }
+        // });
 
         
     </script>
