--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </py-env> -->
 
     <!-- python config -->
-    <py-config>
+    <!-- <py-config>
       packages = ["requests"]
-    </py-config>
+    </py-config> -->
 
   </head>
 
@@ -155,8 +155,6 @@
     <!-- Python code -->
     <py-script>
         from js import tg, user_id, user_firstname, username
-        import requests
-
         display(f"{user_firstname}! Заполните объявление!!!", target="hello")
         
         <!-- display(f"{response}", target="request_status") -->
