--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <!-- Python code -->
     <py-script>
         from js import tg, user_id, user_firstname, username
-        display(f"{user_firstname}! Заполните объявление!!!", target="hello")
+        display(f"{user_firstname}! Заполните объявление!", target="hello")
         
         <!-- display(f"{response}", target="request_status") -->
 
