--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </div>
       </form>
     </div>
+    <h1 id="info">d</h1>
 
 
 
@@ -150,6 +151,7 @@
     <py-script>
       from js import tg, user_id, user_firstname, username, data
       display(f"{user_firstname}! Заполните объявление!", target="hello")
+      display(f"{data}! Заполните объявление!", target="info")
       
 
 
