--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
     <h1 id="info">d</h1>
     <py-config>
-      packages = ["httpx"]
+      packages = ["pyodide"]
     </py-config>
 
 
@@ -141,19 +141,9 @@
     <py-script>
       from js import tg, user_id, user_firstname, username
       display(f"{user_firstname}! Заполните объявление!", target="hello")
+      import pyodide
 
-      import httpx
-
-      headers = {
-          'accept': 'application/json',
-      }
-
-      async def fetch_data():
-          async with httpx.AsyncClient() as client:
-              response = await client.get('http://185.182.110.81:9000/get_city', headers=headers)
-              return response
-
-      response = fetch_data()
+      response = await pyodide.http.pyfetch(url="http://185.182.110.81:9000/get_city")
 
       # Теперь можно обращаться к данным в response, например:
       print(response.text)
