--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
       response = pyodide.http.pyfetch(url="http://185.182.110.81:9000/get_city")
 
       # Теперь можно обращаться к данным в response, например:
-      print(response.text)
-      display(print(response.text), target="info")
+      display(print(response), target="info")
 
 
         
