--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
       <!-- from js import tg, user_id, user_firstname, username
       display(f"{user_firstname}! Заполните объявление!", target="hello") -->
       import pyodide.http
+      import asyncio
 
       async def fetch_data():
         response = await pyodide.http.pyfetch(url="http://185.182.110.81:9000/get_city")
